--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/tutorial/tutorial.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/tutorial/tutorial.adoc
@@ -17,7 +17,7 @@ ifndef::highlightjs-theme[:highlightjs-theme: foundation]
 
 link:http://www.eclipse.org/viatra/[VIATRA] is an open source model transformation framework, focusing on efficient evaluation of model queries and supports various transformation workflows. This document contains a tutorial for getting started with the query and transformation development.
 
-The tutorial relies on the link:../cps/Home{outfilesuffix}[CPS Demonstrator application]. The CPS Demonstrator is specified to cover a usual workflow in Model-driven Engineering, where a system is (1) first described in a source model, then (2) automated model-to-model transformations are used to derive a target model. Finally, (3) model-to-text transformation is performed to generate code from the target domain. In addition, a model generator that can automatically create source domain models can support the correctness testing and performance evaluation of the components. This tutorial uses only a subset of the transformation problem, as its main goal is to illustrate the basics of the VIATRA environment. Consult the original demonstrator for a more complex transformation example.
+The tutorial relies on the link:https://github.com/viatra/viatra-docs/blob/master/cps/Home.adoc[CPS Demonstrator application]. The CPS Demonstrator is specified to cover a usual workflow in Model-driven Engineering, where a system is (1) first described in a source model, then (2) automated model-to-model transformations are used to derive a target model. Finally, (3) model-to-text transformation is performed to generate code from the target domain. In addition, a model generator that can automatically create source domain models can support the correctness testing and performance evaluation of the components. This tutorial uses only a subset of the transformation problem, as its main goal is to illustrate the basics of the VIATRA environment. Consult the original demonstrator for a more complex transformation example.
 
 We expect readers to be familiar with the basics of Eclipse plug-in development, more specifically creating plug-in projects and defining basic UI extensions such as commands. Additionally, we expect a basic understanding of EMF-based modeling. If required, look at the Plug-in development tutorial at link:http://www.vogella.com/tutorials/EclipsePlugin/article.html[] or the EMF tutorial at link:http://www.vogella.com/tutorials/EclipseEMF/article.html[] for a short presentation on these subjects.
 
@@ -34,8 +34,8 @@ include::tutorial/environment.adoc[leveloffset=+1]
 <<<
 include::tutorial/queries.adoc[leveloffset=+2]
 
-// <<<
-// include::tutorial/query-api.adoc[leveloffset=+2]
+<<<
+include::tutorial/query-api.adoc[leveloffset=+2]
 
 <<<
 == Model Transformation Development
